# literature-workflow

./: README.md  SKILL.md  pyproject.toml  skill1_fetch.md  skill2_zotero.md  skill3_batch.md  skill4_review.md
agents/: openai.yaml
litflow/: __init__.py  cli.py  config.py  records.py  workflow.py
references/: trigger-prompts.md
tests/: __init__.py  test_workflow.py
zotero-mcp/: README.md  pyproject.toml
zotero-mcp/src/zotero_mcp/: client.py  semantic_search.py  server.py
zotero-mcp/src/zotero_mcp/tools/: _helpers.py  annotations.py  retrieval.py  search.py  write.py
zotero-mcp/tests/: conftest.py  test_server_create_note.py
