[project]
name = "literature-workflow"
version = "0.1.0"
description = "Stateful literature review workflow scaffolding for Codex, GS/CNKI skills, and Zotero."
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
